--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer>
-    <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
-  </footer>
+  <p style="text-align:center; color:#999; margin:2em 0 1em 0; font-size: 0.95em;">
+    &copy; {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.
+  </p>
+</footer>
