--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,19 +1,20 @@
 .navbar {
-    display: flex;
-    justify-content: center;
-    gap: 2em;
-    background: #fff;
-    border-bottom: 1px solid #ececec;
-    padding: 1em 0;
-    font-size: 1.15em;
-  }
-  .navbar a {
-    color: #222;
-    text-decoration: none;
-    padding: 0.3em 0.6em;
-    border-radius: 3px;
-    transition: background 0.2s;
-  }
-  .navbar a:hover {
-    background: #f3f3f3;
-  }
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  background: transparent;
+  border-bottom: 1px solid #222;
+  padding: 1em 0 0.5em 0;
+  font-size: 1.15em;
+}
+.navbar a {
+  color: #dddddd;
+  text-decoration: none;
+  padding: 0.3em 0.7em;
+  border-radius: 3px;
+  transition: background 0.2s, color 0.2s;
+}
+.navbar a:hover, .navbar a:focus {
+  background: #222;
+  color: #e2b246;
+}
