--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+root {  
+  --main-bg-color: #0A1929;
+  --sec-bg-color: #173A5E;
+  --ter-bg-color: #050c15;
+  --accent-bg-color: #5090D3;
+  --hover-bg-color: #66B2FF;
+  --main-text-color: #dddddd;
+  --sec-text-color: white;
+  --shadow-color: black;
+  --accent-border-color: transparent;
+  color-scheme: dark;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    background: #fff;
-    color: #222;
-  }
-  
-  main {
-    max-width: 950px;
-    margin: 0 auto;
-    padding: 2em 1em;
-  }
-  
-  h1, h2, h3 {
-    font-weight: 400;
-    margin-top: 1.2em;
-    margin-bottom: 0.8em;
-  }
-  
-  .page-content {
-    padding: 2em 0;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-optical-sizing: auto;
+  background: #0A1929;
+  color: #dddddd;
+}
+
+main {
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 2em 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1, h2, h3 {
+  font-weight: 400;
+  margin-top: 1.2em;
+  margin-bottom: 0.8em;
+  text-align: center;
+  color: white;
+}
+
+.page-content {
+  padding: 2em 0;
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+a {
+  color: #5090D3;
+  transition: color 0.2s;
+}
+a:hover {
+  color: #5090D3;
+}
