--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,4 @@
 layout: default
 title: Home
 ---
-<h1>Gallery</h1>
-<div class="gallery-grid">
-  {% for i in (1..12) %}
-    <div class="gallery-item">
-      <a href="#">
-        <img src="https://picsum.photos/400/300?random={{ i }}" alt="Placeholder image {{ i }}">
-      </a>
-    </div>
-  {% endfor %}
-</div>
+<h1>Home</h1>
