--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <footer>
-  
-<div class="profile-container">
-  <img src="/assets/images/my-photo.jpg" alt="My Photo" class="profile-image">
-  <div class="profile-details">
-    <h1>{{ site.author }}</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur commodo, nisl nunc euismod nisi, euismod aliquam nunc nisi euismod.</p>
-  </div>
-</div>
 
 <footer class="site-footer">
   <!-- Your footer code here -->
+  <div class="profile-container">
+    <img src="/assets/images/author.jpg" alt="My Photo" class="profile-image">
+    <div class="profile-details">
+      <h1>{{ site.author }}</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur commodo, nisl nunc euismod nisi, euismod aliquam nunc nisi euismod.</p>
+    </div>
+  </div>
+
   &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.
 </footer>
