Replaced Lorem Ipsum and edited footer for it.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,8 @@
     <img src="/webovka/assets/images/author.jpg" alt="My Photo" class="profile-image">
     <div class="profile-details">
       <h1>{{ site.author }}</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur commodo, nisl nunc euismod nisi, euismod aliquam nunc nisi euismod.</p>
+      <p>Narodil jsem se v Brně v roce 2001 a jsem nadšenec do focení života v přírodě. Žiju v Blučině v Jihomoravském kraji a fotografování se věnuji již tři roky. K samotnému fotografování mne dovedl otec mé přítelkyně, který se do focení snažil spíše dostat právě ji. Vyrážel jsem s ním na cesty zprvu jako prostý pozorovatel, poté jsem si od něj půjčil zrcadlovku a zjistil jsem, že tohle je to, co mě opravdu naplňuje. Nedlouho potom jsem si pořídil vlastní fotoaparát a opravdu se do toho opřel. Focení se stalo mou nedílnou součástí a vášní. I přes to, že chodím do zaměstnání, se snažím pro focení vždy udělat maximum. Své "foto-expedice" podnikám po celé krásné Jižní Moravě v lesích, u rybníků, řek a stepních oblastí, kde se snažím zachytit krásu života v přírodě. Ptactvo, savce i různé druhy hmyzu, občas vyfotím i nějakou tu krajinku. </p>
     </div>
   </div>
-
   &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.
 </footer>
